PseudocodeToPythonTranspiler/grammar_utils/PseudoCodeParser.py
# Generated from PseudoCode.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PseudoCodeParser ( Parser ):

    grammarFileName = "PseudoCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'DIV'", "'MOD'", 
                     "'='", "'<>'", "'<'", "'<='", "'>'", "'>='", "'READ'", 
                     "'WRITE'", "'DECLARE'", "'INTEGER'", "'REAL'", "'CHAR'", 
                     "'STRING'", "'BOOLEAN'", "'ARRAY'", "'OF'", "'INPUT'", 
                     "'OUTPUT'", "'IF'", "'THEN'", "'ELSE'", "'AND'", "'OR'", 
                     "'NOT'", "'ENDIF'", "'CASE'", "'ENDCASE'", "'ENDFUNCTION'", 
                     "'ENDPROCEDURE'", "'OTHERWISE'", "'WHILE'", "'DO'", 
                     "'ENDWHILE'", "'FOR'", "'TO'", "'STEP'", "'NEXT'", 
                     "'REPEAT'", "'UNTIL'", "'CALL'", "'FUNCTION'", "'PROCEDURE'", 
                     "'LENGTH'", "'LCASE'", "'UCASE'", "'SUBSTRING'", "'ROUND'", 
                     "'RANDOM'", "'RETURN'", "'RETURNS'", "'OPENFILE'", 
                     "'READFILE'", "'WRITEFILE'", "'CLOSEFILE'", "'TRUE'", 
                     "'FALSE'", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'['", "']'", "':'", "','", "';'", "'\\u2190'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "DECLARE", 
                      "INTEGER", "REAL", "CHAR", "STRING", "BOOLEAN", "ARRAY", 
                      "OF", "INPUT", "OUTPUT", "IF", "THEN", "ELSE", "AND", 
                      "OR", "NOT", "ENDIF", "CASE", "ENDCASE", "ENDFUCTION", 
                      "ENDPROCEDURE", "OTHERWISE", "WHILE", "DO", "ENDWHILE", 
                      "FOR", "TO", "STEP", "NEXT", "REPEAT", "UNTIL", "CALL", 
                      "FUNCTION", "PROCEDURE", "LENGTH", "LCASE", "UCASE", 
                      "SUBSTRING", "ROUND", "RANDOM", "RETURN", "RETURNS", 
                      "OPENFILE", "READFILE", "WRITEFILE", "CLOSEFILE", 
                      "TRUE", "FALSE", "ONE_LINE_COMMENT", "MULTIPLE_LINE_COMMENT", 
                      "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "COLON", 
                      "COMMA", "SEMICOLON", "ASSIGN", "STRING_LITERAL", 
                      "CHAR_LITERAL", "NUMBER", "REAL_NUMBER", "IDENTIFIER", 
                      "WS" ]

    RULE_program = 0
    RULE_statement_list = 1
    RULE_statement = 2
    RULE_return_statement = 3
    RULE_comment_statement = 4
    RULE_declaration = 5
    RULE_data_type = 6
    RULE_index_type = 7
    RULE_assignment = 8
    RULE_cast = 9
    RULE_type = 10
    RULE_expression = 11
    RULE_additionExpression = 12
    RULE_multiplicationExpression = 13
    RULE_primaryExpression = 14
    RULE_term = 15
    RULE_literal = 16
    RULE_input = 17
    RULE_output = 18
    RULE_value_list = 19
    RULE_if_statement = 20
    RULE_condition = 21
    RULE_comparison_operator = 22
    RULE_case_statement = 23
    RULE_case_list = 24
    RULE_case = 25
    RULE_while_loop = 26
    RULE_for_loop = 27
    RULE_repeat_until_loop = 28
    RULE_procedure_call = 29
    RULE_user_function_definition = 30
    RULE_parameter_list = 31
    RULE_parameter = 32
    RULE_function_call = 33
    RULE_user_function_call = 34
    RULE_argument_list = 35
    RULE_builtin_function_call = 36
    RULE_file_handling = 37
    RULE_file_mode = 38

    ruleNames =  [ "program", "statement_list", "statement", "return_statement", 
                   "comment_statement", "declaration", "data_type", "index_type", 
                   "assignment", "cast", "type", "expression", "additionExpression", 
                   "multiplicationExpression", "primaryExpression", "term", 
                   "literal", "input", "output", "value_list", "if_statement", 
                   "condition", "comparison_operator", "case_statement", 
                   "case_list", "case", "while_loop", "for_loop", "repeat_until_loop", 
                   "procedure_call", "user_function_definition", "parameter_list", 
                   "parameter", "function_call", "user_function_call", "argument_list", 
                   "builtin_function_call", "file_handling", "file_mode" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    DECLARE=15
    INTEGER=16
    REAL=17
    CHAR=18
    STRING=19
    BOOLEAN=20
    ARRAY=21
    OF=22
    INPUT=23
    OUTPUT=24
    IF=25
    THEN=26
    ELSE=27
    AND=28
    OR=29
    NOT=30
    ENDIF=31
    CASE=32
    ENDCASE=33
    ENDFUCTION=34
    ENDPROCEDURE=35
    OTHERWISE=36
    WHILE=37
    DO=38
    ENDWHILE=39
    FOR=40
    TO=41
    STEP=42
    NEXT=43
    REPEAT=44
    UNTIL=45
    CALL=46
    FUNCTION=47
    PROCEDURE=48
    LENGTH=49
    LCASE=50
    UCASE=51
    SUBSTRING=52
    ROUND=53
    RANDOM=54
    RETURN=55
    RETURNS=56
    OPENFILE=57
    READFILE=58
    WRITEFILE=59
    CLOSEFILE=60
    TRUE=61
    FALSE=62
    ONE_LINE_COMMENT=63
    MULTIPLE_LINE_COMMENT=64
    LPAREN=65
    RPAREN=66
    LBRACKET=67
    RBRACKET=68
    COLON=69
    COMMA=70
    SEMICOLON=71
    ASSIGN=72
    STRING_LITERAL=73
    CHAR_LITERAL=74
    NUMBER=75
    REAL_NUMBER=76
    IDENTIFIER=77
    WS=78

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement_list(self):
            return self.getTypedRuleContext(PseudoCodeParser.Statement_listContext,0)


        def getRuleIndex(self):
            return PseudoCodeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PseudoCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.statement_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudoCodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(PseudoCodeParser.StatementContext,i)


        def getRuleIndex(self):
            return PseudoCodeParser.RULE_statement_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_list" ):
                listener.enterStatement_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_list" ):
                listener.exitStatement_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_list" ):
                return visitor.visitStatement_list(self)
            else:
                return visitor.visitChildren(self)




    def statement_list(self):

        localctx = PseudoCodeParser.Statement_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 15)) & ~0x3f) == 0 and ((1 << (_la - 15)) & 4612598611505710849) != 0):
                self.state = 80
                self.statement()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(PseudoCodeParser.DeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(PseudoCodeParser.AssignmentContext,0)


        def input_(self):
            return self.getTypedRuleContext(PseudoCodeParser.InputContext,0)


        def output(self):
            return self.getTypedRuleContext(PseudoCodeParser.OutputContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(PseudoCodeParser.If_statementContext,0)


        def case_statement(self):
            return self.getTypedRuleContext(PseudoCodeParser.Case_statementContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(PseudoCodeParser.While_loopContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(PseudoCodeParser.For_loopContext,0)


        def repeat_until_loop(self):
            return self.getTypedRuleContext(PseudoCodeParser.Repeat_until_loopContext,0)


        def procedure_call(self):
            return self.getTypedRuleContext(PseudoCodeParser.Procedure_callContext,0)


        def function_call(self):
            return self.getTypedRuleContext(PseudoCodeParser.Function_callContext,0)


        def user_function_definition(self):
            return self.getTypedRuleContext(PseudoCodeParser.User_function_definitionContext,0)


        def file_handling(self):
            return self.getTypedRuleContext(PseudoCodeParser.File_handlingContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(PseudoCodeParser.Return_statementContext,0)


        def comment_statement(self):
            return self.getTypedRuleContext(PseudoCodeParser.Comment_statementContext,0)


        def getRuleIndex(self):
            return PseudoCodeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = PseudoCodeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.input_()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.output()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 90
                self.if_statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 91
                self.case_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 92
                self.while_loop()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 93
                self.for_loop()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 94
                self.repeat_until_loop()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 95
                self.procedure_call()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 96
                self.function_call()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 97
                self.user_function_definition()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 98
                self.file_handling()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 99
                self.return_statement()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 100
                self.comment_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(PseudoCodeParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(PseudoCodeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return PseudoCodeParser.RULE_return_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_statement" ):
                listener.enterReturn_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_statement" ):
                listener.exitReturn_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_statement" ):
                return visitor.visitReturn_statement(self)
            else:
                return visitor.visitChildren(self)




    def return_statement(self):

        localctx = PseudoCodeParser.Return_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_return_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(PseudoCodeParser.RETURN)
            self.state = 104
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comment_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ONE_LINE_COMMENT(self):
            return self.getToken(PseudoCodeParser.ONE_LINE_COMMENT, 0)

        def MULTIPLE_LINE_COMMENT(self):
            return self.getToken(PseudoCodeParser.MULTIPLE_LINE_COMMENT, 0)

        def getRuleIndex(self):
            return PseudoCodeParser.RULE_comment_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment_statement" ):
                listener.enterComment_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment_statement" ):
                listener.exitComment_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment_statement" ):
                return visitor.visitComment_statement(self)
            else:
                return visitor.visitChildren(self)




    def comment_statement(self):

        localctx = PseudoCodeParser.Comment_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_comment_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not(_la==63 or _la==64):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECLARE(self):
            return self.getToken(PseudoCodeParser.DECLARE, 0)

        def IDENTIFIER(self):
            return self.getToken(PseudoCodeParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(PseudoCodeParser.COLON, 0)

        def data_type(self):
            return self.getTypedRuleContext(PseudoCodeParser.Data_typeContext,0)


        def getRuleIndex(self):
            return PseudoCodeParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = PseudoCodeParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(PseudoCodeParser.DECLARE)
            self.state = 109
            self.match(PseudoCodeParser.IDENTIFIER)
            self.state = 110
            self.match(PseudoCodeParser.COLON)
            self.state = 111
            self.data_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(PseudoCodeParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(PseudoCodeParser.REAL, 0)

        def CHAR(self):
            return self.getToken(PseudoCodeParser.CHAR, 0)

        def STRING(self):
            return self.getToken(PseudoCodeParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(PseudoCodeParser.BOOLEAN, 0)

        def ARRAY(self):
            return self.getToken(PseudoCodeParser.ARRAY, 0)

        def LBRACKET(self):
            return self.getToken(PseudoCodeParser.LBRACKET, 0)

        def index_type(self):
            return self.getTypedRuleContext(PseudoCodeParser.Index_typeContext,0)


        def RBRACKET(self):
            return self.getToken(PseudoCodeParser.RBRACKET, 0)

        def OF(self):
            return self.getToken(PseudoCodeParser.OF, 0)

        def data_type(self):
            return self.getTypedRuleContext(PseudoCodeParser.Data_typeContext,0)


        def getRuleIndex(self):
            return PseudoCodeParser.RULE_data_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_type" ):
                listener.enterData_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_type" ):
                listener.exitData_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData_type" ):
                return visitor.visitData_type(self)
            else:
                return visitor.visitChildren(self)




    def data_type(self):

        localctx = PseudoCodeParser.Data_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_data_type)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.match(PseudoCodeParser.INTEGER)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(PseudoCodeParser.REAL)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.match(PseudoCodeParser.CHAR)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 4)
                self.state = 116
                self.match(PseudoCodeParser.STRING)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 5)
                self.state = 117
                self.match(PseudoCodeParser.BOOLEAN)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 6)
                self.state = 118
                self.match(PseudoCodeParser.ARRAY)
                self.state = 119
                self.match(PseudoCodeParser.LBRACKET)
                self.state = 120
                self.index_type()
                self.state = 121
                self.match(PseudoCodeParser.RBRACKET)
                self.state = 122
                self.match(PseudoCodeParser.OF)
                self.state = 123
                self.data_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Index_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PseudoCodeParser.IDENTIFIER, 0)

        def NUMBER(self):
            return self.getToken(PseudoCodeParser.NUMBER, 0)

        def getRuleIndex(self):
            return PseudoCodeParser.RULE_index_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndex_type" ):
                listener.enterIndex_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndex_type" ):
                listener.exitIndex_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndex_type" ):
                return visitor.visitIndex_type(self)
            else:
                return visitor.visitChildren(self)




    def index_type(self):

        localctx = PseudoCodeParser.Index_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_index_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            _la = self._input.LA(1)
            if not(_la==75 or _la==77):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PseudoCodeParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(PseudoCodeParser.ASSIGN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudoCodeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PseudoCodeParser.ExpressionContext,i)


        def LBRACKET(self):
            return self.getToken(PseudoCodeParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(PseudoCodeParser.RBRACKET, 0)

        def getRuleIndex(self):
            return PseudoCodeParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = PseudoCodeParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assignment)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(PseudoCodeParser.IDENTIFIER)
                self.state = 130
                self.match(PseudoCodeParser.ASSIGN)
                self.state = 131
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(PseudoCodeParser.IDENTIFIER)
                self.state = 133
                self.match(PseudoCodeParser.LBRACKET)
                self.state = 134
                self.expression()
                self.state = 135
                self.match(PseudoCodeParser.RBRACKET)
                self.state = 136
                self.match(PseudoCodeParser.ASSIGN)
                self.state = 137
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CastContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(PseudoCodeParser.TypeContext,0)


        def LPAREN(self):
            return self.getToken(PseudoCodeParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(PseudoCodeParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(PseudoCodeParser.RPAREN, 0)

        def getRuleIndex(self):
            return PseudoCodeParser.RULE_cast

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCast" ):
                listener.enterCast(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCast" ):
                listener.exitCast(self)
